Found a workaround for bug where long text goes off screen

--- a/imports/ui/components/Share/ShareForm/styles.css
+++ b/imports/ui/components/Share/ShareForm/styles.css
@@ -13,6 +13,8 @@
 
 #compliment-form {
   margin: auto;
+  padding: 0 1rem;
+  width: 100%;
 }
 
 .share-fields {
